# redCoverApi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 03865cdfe0c9_init.py  396fd784fc2f_add_invite_user.py  40f0d5f47088_add_tips_api.py  4f2e086ef4e4_add_ad_table.py  5c2abd9a4da3_fix_invite_table.py  a34c65c94a46_fix_openapi.py  baefe0c8c7f4_add_cover_remarks.py  e6ee170779fe_add_received.py  ec763a57c436_add_some_api.py
app/: main.py  until.py
app/api/: deps.py  wechat.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: index.py  red_cover_miniapp.py
app/controller/: miniapp.py  wechat.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_miniapp.py
app/db/: base.py  base_class.py  session.py
app/models/: miniapp.py
app/schemas/: __init__.py  miniapp.py  miniapp_ad.py  miniapp_cover.py  miniapp_cover_received.py  miniapp_cover_serial.py  miniapp_cps.py  miniapp_invite_user.py  miniapp_tip.py  miniapp_user.py
app/service/: sina.py
app/templates/: received_cover.html
