[tool.poetry]
name = "make-money"
version = "0.1.0"
description = "个人接口合集"
authors = ["zhangzhi <781029588@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
SQLAlchemy = "^1.3.22"
psycopg2 = "^2.8.6"
tortoise-orm = {extras = ["asyncpg"], version = "^0.16.19"}
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
