[tool.poetry]
name = "make-money"
version = "0.1.0"
description = "个人接口合集"
authors = ["zhangzhi <781029588@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
environs = "^9.3.0"
requests = "^2.25.1"
sqlalchemy = "^1.3.22"
alembic = "^1.5.2"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
